# libsoup

./: .clang-format  .clang-tidy  .cvsignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gobject-linter.toml  .lcovrc  AUTHORS  ChangeLog  Doxyfile  HACKING  MAINTAINERS  Makefile.am  Makefile.glib  NEWS  README  README.msvc  TODO  acinclude.m4  autogen.sh  config.h.win32.in  configure.ac  configure.in  get-apache-module-dirs.sh  get_apache_module_dirs.py  get_apache_modules_dirs.py  gtk-doc.make  libsoup-2.2.pc.in  libsoup-2.4.pc.in  libsoup-zip.in  libsoup.doap  libsoup.pc.in  meson.build  meson_options.txt  run-scan-build  soup-2.0.pc.in
docs/reference/: .cvsignore  Makefile.am  build-howto.md  build-howto.xml  client-advanced.md  client-advanced.xml  client-basic.md  client-basic.xml  client-howto.md  client-howto.xml  client-thread-safety.md  client-tls.md  client-tls.xml  gtk-markdown-to-docbook.py  libsoup-2.4-docs.sgml  libsoup-2.4-sections.txt  libsoup-2.4.types  libsoup-3.0-docs.sgml  libsoup-3.0-docs.xml  libsoup-3.0-sections.txt  libsoup-docs.sgml  libsoup-overrides.txt  libsoup-sections.txt  libsoup.toml.in  libsoup.types  meson.build  migrating-from-libsoup-2.md  migrating-from-libsoup-2.xml  porting-2.2-2.4.xml  request-howto.xml  server-howto.md  server-howto.xml  session-porting.xml  soup-docs.sgml  soup-sections.txt  urlmap.js
examples/: Makefile.am  get.c  meson.build  reverse-http-test.c  simple-httpd.c  simple-proxy.c  unix-socket-client.c  unix-socket-server.c
fuzzing/: fuzz.h  fuzz_content_sniffer.c  fuzz_content_sniffer.dict  fuzz_cookie_parse.c  fuzz_cookie_parse.dict  fuzz_date_time.c  fuzz_decode_data_uri.c  fuzz_decode_data_uri.dict  fuzz_header_parsing.c  fuzz_header_parsing.dict  fuzz_headers_parse_request.c  fuzz_headers_parse_response.c  meson.build
libsoup/: .cvsignore  Makefile.am  Soup-2.4-custom.vala  Soup-2.4.metadata  Soup-3.0.metadata  Soup.py  directory.css  generate-header-names.py  generate-version-header.py  libsoup-2.4.sym  libsoup-3.0.pc.in  md5-utils.h  meson.build  soup-address.c  soup-address.h  soup-auth-basic.c  soup-auth-basic.h  soup-auth-digest.c  soup-auth-digest.h  soup-auth-domain-basic.c  soup-auth-domain-basic.h  soup-auth-domain-digest.c  soup-auth-domain-digest.h  soup-auth-domain.c  soup-auth-domain.h  soup-auth-manager-ntlm.c  soup-auth-manager-ntlm.h  soup-auth-manager.c  soup-auth-manager.h  soup-auth-negotiate.c  soup-auth-negotiate.h  soup-auth-ntlm.c  soup-auth-ntlm.h  soup-auth.c  soup-auth.h  soup-autocleanups.h  soup-body-input-stream.c  soup-body-input-stream.h  soup-body-output-stream.c  soup-body-output-stream.h  (+270 more)
libsoup/auth/: soup-auth-basic.c  soup-auth-basic.h  soup-auth-digest-private.h  soup-auth-digest.c  soup-auth-digest.h  soup-auth-domain-basic.c  soup-auth-domain-basic.h  soup-auth-domain-digest.c  soup-auth-domain-digest.h  soup-auth-domain.h  soup-auth-manager.c  soup-auth-manager.h  soup-auth-negotiate.c  soup-auth-negotiate.h  soup-auth-ntlm.c  soup-auth-ntlm.h  soup-auth.c  soup-auth.h  soup-connection-auth.c  soup-connection-auth.h  soup-tls-interaction.c  soup-tls-interaction.h
libsoup/cache/: soup-cache-client-input-stream.c  soup-cache-client-input-stream.h  soup-cache-input-stream.c  soup-cache-input-stream.h  soup-cache-private.h  soup-cache.c  soup-cache.h
libsoup/content-decoder/: soup-brotli-decompressor.c  soup-brotli-decompressor.h  soup-compression-dictionary-decoder.c  soup-compression-dictionary-decoder.h  soup-compression-dictionary-request-private.h  soup-compression-dictionary-request.c  soup-compression-dictionary-request.h  soup-content-decoder.c  soup-content-decoder.h  soup-content-processor.c  soup-content-processor.h  soup-converter-wrapper.c  soup-converter-wrapper.h  soup-dictionary-header-private.c  soup-dictionary-header-private.h  soup-zstd-decompressor.c  soup-zstd-decompressor.h
libsoup/content-sniffer/: soup-brotli-decompressor.h  soup-content-decoder.c  soup-content-decoder.h  soup-content-processor.c  soup-content-processor.h  soup-content-sniffer-stream.c  soup-content-sniffer-stream.h  soup-content-sniffer.c  soup-content-sniffer.h  soup-converter-wrapper.c  soup-converter-wrapper.h
libsoup/cookies/: soup-cookie-jar-db.c  soup-cookie-jar-db.h  soup-cookie-jar-text.c  soup-cookie-jar-text.h  soup-cookie-jar.c  soup-cookie-jar.h  soup-cookie.c  soup-cookie.h
libsoup/hsts/: soup-hsts-enforcer-db.c  soup-hsts-enforcer-db.h  soup-hsts-enforcer.c  soup-hsts-enforcer.h  soup-hsts-policy.c  soup-hsts-policy.h
libsoup/http1/: soup-body-input-stream.c  soup-body-output-stream.c  soup-client-message-io-http1.c  soup-client-message-io-http1.h  soup-message-io-data.c  soup-message-io-data.h  soup-message-io-source.c
libsoup/http2/: soup-body-input-stream-http2.c  soup-body-input-stream-http2.h  soup-client-message-io-http2.c  soup-client-message-io-http2.h
libsoup/include/: meson.build  soup-installed.h
libsoup/server/: soup-auth-domain-basic.c  soup-auth-domain-basic.h  soup-auth-domain-digest.c  soup-auth-domain-digest.h  soup-auth-domain-private.h  soup-auth-domain.c  soup-auth-domain.h  soup-listener.c  soup-listener.h  soup-message-body.c  (+17 more)
po/: ab.po  (+74 more)
python/: ChangeLog  Makefile.am  README  SoupLogger.override  SoupMessageBody.override  SoupMessageHeaders.override  SoupURI.override  configure.in  libsoup-ignore.defs  libsoup.defs  libsoup.override  libsoupmodule.c  soup-forms.override  soup-headers.override  soup-xmlrpc.override
tests/: .cvsignore  Makefile.am  apache-wrapper.c  apache-wrapper.h  auth-test.c  brotli-decompressor-test.c  cache-test.c  cached-resolver-test.c  chunk-io-test.c  chunk-test.c  coding-test.c  connection-test.c  context-test.c  continue-test.c  cookies-test.c  date-test.c  date.c  decompressor-test.c  dict.c  dns.c  forms-test.c  get.c  getbug.c  header-parsing-test.c  header-parsing.c  hsts-db-test.c  hsts-test.c  htdigest  http2-body-stream-test.c  http2-server.py  http2-test.c  httpd.conf.22.in  httpd.conf.24.in  httpd.conf.in  libsoup.supp  logger-test.c  meson.build  misc-test.c  mock-pkcs11.c  multipart-test.c  (+50 more)
(+145 files in other folders)
